--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="backNavBarAplication">#253341</color>
+    <color name="blueAplication">#1D9BF0</color>
+    <color name="grayAplication">#AAB8C2</color>
+
+
+
 </resources>
