--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-    android:id="@+id/firstFragment"
+    android:id="@+id/home"
     android:icon="@drawable/icon_home"
     android:title="Home"/>
 
     <item
-        android:id="@+id/secondFragment"
+        android:id="@+id/Finanzas"
         android:icon="@drawable/baseline_account_balance_wallet_24"
         android:title="Finanzas"/>
     <item
-        android:id="@+id/thirdFragment"
+        android:id="@+id/estadistica"
         android:icon="@drawable/baseline_bar_chart_24"
         android:title="Partidos En Curso"/>
     <item
